app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
        app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: default
      volumes:
      - name: gs-credentials
        secret:
          secretName: gs-credentials
      containers:
      - name: server
        image: asia.gcr.io/django-project-368202/server
        ports:
        - containerPort: 8000
        command: ['gunicorn', 'app.wsgi:application', '-b', '0.0.0.0:8000']
        volumeMounts:
          - mountPath: /gs
            name: gs-credentials
