app/k8s/managed-certificates-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managed-certificate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managed-certificate-controller
  template:
    metadata:
      labels:
        app: managed-certificate-controller
    spec:
      serviceAccountName: managed-certificate-account
      containers:
      - name: managed-certificate-controller
        image: gcr.io/gke-release/managed-certificate-controller:v1.2.11
        imagePullPolicy: Always
        volumeMounts:
        - name: ssl-certs
          mountPath: "/etc/ssl/certs"
          readOnly: true
        - name: usrsharecacerts
          mountPath: "/usr/share/ca-certificates"
          readOnly: true
        args:
        - --health-check-address=:8089
        # livenessProbe:
        #   httpGet:
        #     path: /health-check
        #     port: 8089
        #   initialDelaySecond: 600
        #   periodSeconds: 60
      volumes:
      - name: ssl-certs
        hostPath:
          path: "/etc/ssl/certs"
          type: Directory
      - name: usrsharecacerts
        hostPath:
          path: "/usr/share/ca-certificates"
          type: Directory
