app/k8s/service.yaml
# kind: Service
# apiVersion: v1
# metadata:
#   name: web-service
#   labels:
#     app: server
# spec:
#   type: NodePort
#   ports:
#   - name: http
#     protocol: TCP
#     port: 80
#     targetPort: 8000
#   selector:
#     app: server


apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: api
spec:
  selector:
    app: api
    # tier: web
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
  loadBalancerIP: 35.221.193.223
