app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/ingress.global-static-ip-name: 35.221.193.223
    # networking.gke.io/managed-certificates: web-certificate
spec:
  rules:
  - host: scottman625.website
    http:
      paths:
      - path: /web-service
        pathType: Prefix
        backend :
          service: 
            name: web-service
            # servicePort: 80
            port:
              number: 80
